@@ -17,18 +17,13 @@
       &lt;!ENTITY AvroVersion "${version}"&gt;
     </echo>
     <exec executable="${forrest.home}/bin/forrest" failonerror="true">
-      <env key="JAVA_HOME" value="${java5.home}"/>
       <arg value="-Dproject.content-dir=src"/>
       <arg value="-Dproject.site=../${build.dir}/"/>
     </exec>
   </target>
 
-  <target name="forrest.check" unless="forrest.home" depends="java5.check">
+  <target name="forrest.check" unless="forrest.home">
     <fail message="'forrest.home' is not defined. Please pass -Dforrest.home=&lt;base of Apache Forrest installation&gt; to Ant on the command-line." />
-  </target>
-
-  <target name="java5.check" unless="java5.home">
-    <fail message="'java5.home' is not defined.  Forrest requires Java 5.  Please pass -Djava5.home=&lt;base of Java 5 distribution&gt; to Ant on the command-line." />
   </target>
 
   <target name="clean" description="Delete build files, and their directories">
