@@ -1,0 +1,3 @@
+# Make Forrest work with Java6
+forrest.validate.sitemap=false
+
